# smart-cut-quote-tauri

./: .gitignore
docs/: BUG_REPORT_DXF_RENDERING.md  CUSTOMER_ANALYTICS_IMPLEMENTATION.md  DxfConverterWrapper_EXE.cs  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  SMART CUT QUOTE new.md
refactor_dxf_converter_js/: NOTES_FOR_CLAUDE.md  dxf-converter-cli.js  package.json
refactor_dxf_converter_js/src/core/: contourBuilder.js  converter.js  dxfParser.js  geometryUtils.js  jsonFormatter.js
refactor_dxf_converter_js/src/utils/: fileHelpers.js  sparrowTransformer.js
refactor_sparrow_rust/: Cargo.toml  NOTES_FOR_CLAUDE.md
refactor_sparrow_rust/src/: lib.rs  svg_exporter.rs
refactor_sparrow_rust/src/core/: mod.rs  nesting.rs  serializer.rs
smart-cut-quote/: index.html  nest_ok.json  package-lock.json  package.json
smart-cut-quote/docs/: DXF_HEALING_ARCHITECTURE.md  DXF_HEALING_JSKETCHER_FEASIBILITY.md  DXF_HEALING_MASTER_STATUS.md  DXF_HEALING_PHASE0_SUMMARY.md  DXF_HEALING_PHASE1_SUMMARY.md  DXF_HEALING_PHASE2_SUMMARY.md  DXF_HEALING_PHASE3_AUTO_FIX.md  DXF_HEALING_PHASE3_DRAG_TO_SELECT.md  DXF_HEALING_PHASE3_LAYER_VISIBILITY.md  DXF_HEALING_PHASE3_MERGE_ENDPOINTS.md  DXF_HEALING_PHASE4_POLISH.md  DXF_HEALING_PROJECT_SUMMARY.md  DXF_HEALING_USER_GUIDE.md
smart-cut-quote/scripts/: convert-font.js  download-jspdf-font.js
smart-cut-quote/src/: App.tsx
smart-cut-quote/src-tauri/: Cargo.toml  tauri.conf.json
smart-cut-quote/src-tauri/capabilities/: default.json
smart-cut-quote/src-tauri/migrations/: 001_initial_schema.sql  002_simplify_operations.sql  003_add_material_pricing.sql  004_add_nesting_settings.sql  005_add_tasks.sql  006_add_production_tracking.sql
smart-cut-quote/src-tauri/src/: lib.rs  main.rs
smart-cut-quote/src-tauri/src/commands/: dxf_converter.rs  mod.rs  sparrow_cli.rs
smart-cut-quote/src-tauri/src/nesting_engine/: mod.rs  nesting.rs  serializer.rs  terminator.rs
smart-cut-quote/src/assets/fonts/: README.md  roboto-font.ts
smart-cut-quote/src/components/Dashboard/: CustomerAnalytics.tsx  QuoteGrid.tsx  StatisticsChart.tsx  TasksList.tsx
smart-cut-quote/src/components/Dialogs/: AddClientDialog.tsx  NewQuoteDialog.tsx  PreviewDialog.tsx
smart-cut-quote/src/components/DxfHealing/: DxfCanvas.tsx  DxfHealingDialog.tsx  DxfSidebar.tsx  DxfStatusBar.tsx  DxfToolbar.tsx  useHotkeys.ts
smart-cut-quote/src/components/FileList/: FileListGrid.tsx  FileUploadButton.tsx
smart-cut-quote/src/components/Layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  Stepper.tsx
smart-cut-quote/src/components/Settings/: CompanyTab.tsx  MachineTab.tsx  MaterialStockTab.tsx  OperationsTab.tsx  PricingTab.tsx
smart-cut-quote/src/components/Viewer/: DxfThumbnail.tsx  DxfViewer.tsx  SvgViewer.tsx
smart-cut-quote/src/data/: mockData.ts
smart-cut-quote/src/lib/: formatCurrency.ts
smart-cut-quote/src/lib/dxf-converter/: contourBuilder.ts  converter.ts  dxfParser.ts  geometryUtils.ts  index.ts  jsonFormatter.ts  types.ts
smart-cut-quote/src/pages/: ClientSelection.tsx  Dashboard.tsx  FileHealing.tsx  FilePreview.tsx  FileUpload.tsx  Nesting.tsx  PartConfig.tsx  PartLibrary.tsx  PdfExport.tsx  Settings.tsx  Summary.tsx
smart-cut-quote/src/services/: dxfParserService.ts  dxfValidationService.ts  dxfWriterService.ts  nestingService.ts  pdfService.ts  pricingService.ts  pricingServiceV2.ts  quoteService.ts  threeRenderService.ts  thumbnailService.ts
smart-cut-quote/src/services/__tests__/: dxfServices.test.ts
smart-cut-quote/src/services/database/: analyticsRepository.ts  clientRepository.ts  connection.ts  index.ts  machineRepository.ts  materialRepository.ts  (+5 more)
smart-cut-quote/src/stores/: dxfHealingStore.ts  quoteStore.ts
smart-cut-quote/src/types/: analytics.ts  dxfHealing.ts  quote.ts  task.ts
smart-cut-quote/test_dxf_files/: test_open_contour.dxf  test_valid_closed.dxf
